fixed spacing on landinginfo

--- a/src/main/resources/site/parts/landinginfo/css/landinginfo.module.css
+++ b/src/main/resources/site/parts/landinginfo/css/landinginfo.module.css
@@ -55,8 +55,8 @@
     font-size: 2.5rem;
     font-weight: 700;
     color: #212427;
-    margin: 0 0 1rem 0;
-    padding: 0 0 0 0;
+    margin: 0 0 1.5rem 0;
+    padding: 0 1rem;
 }
 .heroText {
     font-size: 1.5rem;
